--- a/src/pages/layout/topmenu.css
+++ b/src/pages/layout/topmenu.css
@@ -17,9 +17,8 @@
     width: 0px;
     height: 20px;
     border: 1px #1D94A8 ridge;
-    margin-left: 20px;
-    margin-top: 12px;
-    margin-right: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -29,4 +28,32 @@
     .nav-menu{
         padding: 0px;
     }
+  }
+
+  .nav-campaign{
+    color: #A43F3C !important;
+    width: 238px;
+    font-weight: bold;
+    font-size: 18px;
+    background: #FFFFFF;
+    border: 2px solid #A43F3C;
+    box-sizing: border-box;
+    border-radius: 20px;
+    text-align: center;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    margin-right: 10px;
+  }
+
+  .nav-donate{
+      color: white !important;
+      background: #A43F3C;
+      border: 2px solid #A43F3C;
+      border-radius: 20px;
+      width: 143px;
+      font-size: 18px;
+      text-align: center;
+      padding-top: 0px !important;
+      padding-bottom: 0px !important;
+      margin-right: 10px;
   }
