--- a/src/components/cardcampaign.css
+++ b/src/components/cardcampaign.css
@@ -12,8 +12,8 @@
     border: 1px solid #A43F3C;
     border-radius: 4px;
     padding: 4px 18px;
-    width: 100px !important;
     color: #A43F3C;
+    margin-bottom: 17px;
 }
 
 .card-title{
