--- a/src/pages/campaigndetail.css
+++ b/src/pages/campaigndetail.css
@@ -159,3 +159,12 @@
     margin: 0; padding: 30px 0; 
 }
 
+.donate-campaign-button a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.donate-campaign-button a:hover{
+    text-decoration: none;
+    color: #fff;
+}
