--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -72,3 +72,12 @@
     font-size: 16px !important;    
     font-weight: bold !important;
 }
+
+.reset-password-btn{
+    border: none !important;
+    background-color: white !important;
+    font-weight: bold !important;
+    font-size: 14px !important;
+    text-decoration-line: underline;
+    color: #000000 !important;
+}
