add card campaign user, edit trending topic, finish ccreate campaign, edit discover get newest, edit upload profile

--- a/src/components/cardcampaign.css
+++ b/src/components/cardcampaign.css
@@ -53,3 +53,8 @@
     text-decoration: none;
     background-color: cornflowerblue;
 }
+
+
+.progress-bar{
+    background-color: #1D94A8 !important;
+}
