--- a/src/components/trendingtopic.css
+++ b/src/components/trendingtopic.css
@@ -1,10 +1,12 @@
 .trending{
     background: linear-gradient(180deg, #F1EDE4 0%, rgba(241, 237, 228, 0) 100%);
     padding-top: 72px;
+    margin-top: -3px;
 }
 
 .img-trending{
     width: 100%;
+    height: 100%;
 }
 
 .title{
@@ -21,7 +23,7 @@
 
 .desc-trending{
     font-size: 22px;
-    line-height: 32px;
+    line-height: 40px;
     margin-top: 10px;
     margin-bottom: 0px;
 }
