--- a/src/pages/CreateCampaign.css
+++ b/src/pages/CreateCampaign.css
@@ -62,3 +62,29 @@ label{
     width: 100%;
     height: 100%;
 }
+
+
+.style-bg-image{
+    background-color: #E1E0E0;    
+    height: 100%;
+}
+
+.style-upload-image{
+    text-align: center;
+    font-size: 36px;
+    color: #9F9F9F ;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
+
+.style-story-image{
+    background-color: #E1E0E0;   
+    height: 100%;
+}
+
+.style-text-story-image{
+    text-align: center;
+    font-size: 36px;
+    color: #9F9F9F ;
+}
