add loading at register ,login and create campaign

--- a/src/pages/CreateCampaign.css
+++ b/src/pages/CreateCampaign.css
@@ -17,6 +17,7 @@ label{
     margin-bottom: 135px;
     font-size: 16px !important;    
     font-weight: bold !important;
+    width: 208px;
 }
 
 
