--- a/src/pages/layout/footer.css
+++ b/src/pages/layout/footer.css
@@ -27,3 +27,13 @@
 .list-footer:hover{
     text-decoration: none;
 }
+
+
+@media only screen and (max-width: 768px) {
+    .logo-brand-footer{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }  
+}
+  
