--- a/src/pages/layout/topmenu.css
+++ b/src/pages/layout/topmenu.css
@@ -172,3 +172,21 @@
 	}
 
 }
+
+
+
+
+
+@media only screen and (max-width: 768px) {
+  .navbar-dekstop{
+      display: none;
+  }
+  .search-mobile-style{
+      width: 250px;
+      border: 1px solid #9F9F9F;
+      height: 30px;
+      border-radius: 10px;
+      margin-top: 5px;
+  }
+
+}
