--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -82,3 +82,12 @@
     color: #000000 !important;
 }
 
+
+@media only screen and (max-width: 768px) {
+    .border-container {
+        margin: 0;
+        margin-top: 100px;
+        border: 1px solid #E1E0E0;
+        border-radius: 4px;
+    }
+}
