--- a/src/pages/donate.css
+++ b/src/pages/donate.css
@@ -48,3 +48,16 @@ input[type=number] {
     width: auto;
     height: auto;
 }
+
+.form-padding{
+    padding-left: 100px;
+    padding-right: 100px;
+}
+
+@media only screen and (max-width: 768px) {
+    .form-padding{
+      padding: 0;
+    }
+
+}
+    
